[gd_scene load_steps=9 format=2]

[ext_resource path="res://nodes/BackgroundInicial.tscn" type="PackedScene" id=1]
[ext_resource path="res://nodes/BackgroundRandom.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/instruciones.png" type="Texture" id=3]
[ext_resource path="res://nodes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Levels/FirstRoom.gd" type="Script" id=5]
[ext_resource path="res://nodes/Brave.tscn" type="PackedScene" id=6]
[ext_resource path="res://nodes/Door.tscn" type="PackedScene" id=7]
[ext_resource path="res://nodes/ToDo.tscn" type="PackedScene" id=8]

[node name="FirstRoom" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 2 )]
position = Vector2( 1351.99, 5.65686 )

[node name="Camera2" type="Camera2D" parent="Background"]
position = Vector2( 0, -5.65686 )
anchor_mode = 0

[node name="Background2" parent="." instance=ExtResource( 2 )]
position = Vector2( 13.4543, 935.077 )

[node name="Camera3" type="Camera2D" parent="Background2"]
position = Vector2( 0, 5.72595 )
scale = Vector2( 4123.31, -1972.92 )
anchor_mode = 0

[node name="Background3" parent="." instance=ExtResource( 2 )]
position = Vector2( 1364.59, 940.803 )

[node name="Camera4" type="Camera2D" parent="Background3"]
anchor_mode = 0

[node name="Background4" parent="." instance=ExtResource( 2 )]
position = Vector2( 16.9514, 1873.13 )

[node name="Camera5" type="Camera2D" parent="Background4"]
position = Vector2( -16.9514, 8.47998 )
anchor_mode = 0

[node name="Background5" parent="." instance=ExtResource( 2 )]
position = Vector2( 1373.06, 1881.61 )

[node name="Camera2D" type="Camera2D" parent="Background5"]
anchor_mode = 0

[node name="BackgroundInit" parent="." instance=ExtResource( 1 )]

[node name="instruciones" type="Sprite" parent="BackgroundInit"]
position = Vector2( 648.695, 364.689 )
scale = Vector2( 0.688871, 0.701054 )
texture = ExtResource( 3 )

[node name="Camera1" type="Camera2D" parent="BackgroundInit"]
anchor_mode = 0

[node name="Door" parent="BackgroundInit" instance=ExtResource( 7 )]
position = Vector2( 1237.43, 454.418 )
rotation = 1.57079
pos = Vector2( 1500, 454 )

[node name="Door2" parent="BackgroundInit" instance=ExtResource( 7 )]
position = Vector2( 648, 836 )
rotation = 3.14159
pos = Vector2( 665.639, 1098.06 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 632, 640.076 )

[node name="Brave" parent="." instance=ExtResource( 6 )]
position = Vector2( 2398.74, 209.074 )

[node name="Brave3" parent="." instance=ExtResource( 6 )]
position = Vector2( 2449.81, 715.544 )

[node name="Brave2" parent="." instance=ExtResource( 6 )]
position = Vector2( 1538.45, 183.647 )

[node name="Brave4" parent="." instance=ExtResource( 6 )]
position = Vector2( 347.904, 1678.98 )

[node name="ToDo" parent="." instance=ExtResource( 8 )]
position = Vector2( 351.035, 1351.2 )

[node name="ToDo2" parent="." instance=ExtResource( 8 )]
position = Vector2( 965.487, 1343.65 )

[node name="ToDo3" parent="." instance=ExtResource( 8 )]
position = Vector2( 1520.49, 1691 )

[node name="ToDo4" parent="." instance=ExtResource( 8 )]
position = Vector2( 1520.49, 1109.57 )

[node name="ToDo5" parent="." instance=ExtResource( 8 )]
position = Vector2( 2483.24, 1105.8 )

[node name="ToDo6" parent="." instance=ExtResource( 8 )]
position = Vector2( 2475.69, 1679.67 )

[node name="Brave5" parent="." instance=ExtResource( 6 )]
position = Vector2( 973.769, 1677.78 )

[node name="Brave6" parent="." instance=ExtResource( 6 )]
position = Vector2( 178.104, 2310.77 )

[node name="Brave7" parent="." instance=ExtResource( 6 )]
position = Vector2( 933.586, 2620.8 )

[node name="Brave9" parent="." instance=ExtResource( 6 )]
position = Vector2( 388.356, 2610.11 )

[node name="Brave8" parent="." instance=ExtResource( 6 )]
position = Vector2( 1150.97, 2332.15 )
[connection signal="body_entered" from="Background" to="." method="_on_Background_body_entered"]
[connection signal="body_entered" from="Background2" to="." method="_on_Background2_body_entered"]
[connection signal="body_entered" from="Background3" to="." method="_on_Background3_body_entered"]
[connection signal="body_entered" from="Background4" to="." method="_on_Background4_body_entered"]
[connection signal="body_entered" from="Background5" to="." method="_on_Background5_body_entered"]
[connection signal="body_entered" from="BackgroundInit" to="." method="_on_BackgroundInit_body_entered"]
